updated readme; added option to pass in the id of a textbox, which will be updated with the current tally

--- a/index.html
+++ b/index.html
@@ -9,8 +9,9 @@
 
 <body>
 	<div id='container'></div>
+	<input type="text" name="tally" id="tally">
 </body>
 
 <script>
-	peepGrid = new PeepGrid('#container');
+	peepGrid = new PeepGrid('#container', {textbox: '#tally'});
 </script>
